Continue to edit the header styling
Added a div-left in index in order to flex the items in
the title area.
Changed display to flex for the header and title areas
Set the content in title area and header to middle of
both axis.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
       </ul>
     </div>
     <div class="title-area">
-      <h1>This website is awsome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur a
-        dipiscing elit. Nullam in mauris consequat, 
-        porttitor ante sed, venenatis mauris. Vestibulum 
-        pretium semper tellus, vel porttitor ligula. Ut 
-        scelerisque condimentum ipsum, quis fringilla 
-        massa ullamcorper ut. Donec ex odio, efficitur id 
-        fringilla nec, facilisis a libero. Maecenas iaculis
-        nulla odio, vel pellentesque nulla euismod quis. 
-        Praesent volutpat mattis aliquet. Integer id 
-        imperdiet est.</p>
-        <img alt="Placeholder Image" src="#">
+      <div class="div-left">
+        <h1>This website is awsome</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur a
+          dipiscing elit. Nullam in mauris consequat, 
+          porttitor ante sed, venenatis mauris.</p>
+          <button>Sign Up Now!</button>
+      </div>
+      <img alt="Placeholder Image" src="#">
     </div>
     <div class="product-info">
       <h2>Some Information</h2>
