--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
       </div>
       <img alt="Placeholder Image" src="#">
     </div>
+    <h2>Some Information</h2>
     <div class="product-info">
-      <h2>Some Information</h2>
+      <div class="info">
+        <img alt="Product info placeholder" src="#"">
+        <p>Some product info text blurb that lines up nicely with
+          the image goes here.
+        </p>
+      </div>
+      <div class="info">
+        <img alt="Product info placeholder" src="#"">
+        <p>Some product info text blurb that lines up nicely with
+          the image goes here.
+        </p>
+      </div>
+      <div class="info">
+        <img alt="Product info placeholder" src="#"">
+        <p>Some product info text blurb that lines up nicely with
+          the image goes here.
+        </p>
+      </div>
       <div class="info">
         <img alt="Product info placeholder" src="#"">
         <p>Some product info text blurb that lines up nicely with
