Change styling in product-info to add the header
Put the h2 into the product-info div this required
adding an additional info div in order for the flex
display to keep its shape.

--- a/index.html
+++ b/index.html
@@ -24,31 +24,34 @@
       </div>
       <img alt="Placeholder Image" src="#">
     </div>
-    <h2>Some Information</h2>
+    
     <div class="product-info">
-      <div class="info">
-        <img alt="Product info placeholder" src="#"">
-        <p>Some product info text blurb that lines up nicely with
-          the image goes here.
-        </p>
-      </div>
-      <div class="info">
-        <img alt="Product info placeholder" src="#"">
-        <p>Some product info text blurb that lines up nicely with
-          the image goes here.
-        </p>
-      </div>
-      <div class="info">
-        <img alt="Product info placeholder" src="#"">
-        <p>Some product info text blurb that lines up nicely with
-          the image goes here.
-        </p>
-      </div>
-      <div class="info">
-        <img alt="Product info placeholder" src="#"">
-        <p>Some product info text blurb that lines up nicely with
-          the image goes here.
-        </p>
+      <h2>Some Information</h2>
+      <div class="info-cards">
+        <div class="info">
+          <img alt="Product info placeholder" src="#"">
+          <p>Some product info text blurb that lines up nicely with
+            the image goes here.
+          </p>
+        </div>
+        <div class="info">
+          <img alt="Product info placeholder" src="#"">
+          <p>Some product info text blurb that lines up nicely with
+            the image goes here.
+          </p>
+        </div>
+        <div class="info">
+          <img alt="Product info placeholder" src="#"">
+          <p>Some product info text blurb that lines up nicely with
+            the image goes here.
+          </p>
+        </div>
+        <div class="info">
+          <img alt="Product info placeholder" src="#"">
+          <p>Some product info text blurb that lines up nicely with
+            the image goes here.
+          </p>
+        </div>
       </div>
     </div>
     <div class="corroberations">
