Changed corr. quote div to testimonial and styled
Changed the corroberation divs to testimonial to
icrease accuracy
Added initial styling to the testimonal section of
the website

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </div>
       </div>
     </div>
-    <div class="corroberations">
-      <p class="corroberation-quote">Lorem ipsum dolor sit amet, consectetur a
+    <div class="testimonaial">
+      <p class="testimonaial-quote">Lorem ipsum dolor sit amet, consectetur a
       dipiscing elit. Nullam in mauris consequat, 
       porttitor ante sed, venenatis mauris. Vestibulum 
       pretium semper tellus</p>
-      <p class="corroberation-attribution">-Person McPersonton</p>
+      <p class="testimonaial-attribution">-Person McPersonton</p>
     </div>
     <div class="signup">
       <h2>Signup Now</h2>
