Add styling to signup section
Added signup-container and signup-text divs to index to
facilitate styling
Added styling in order to create the blue box with the
signup text in it on the left side and signup button on
the right side

--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
       <p class="testimonaial-attribution">-Person McPersonton</p>
     </div>
     <div class="signup">
-      <h2>Signup Now</h2>
-      <p>You should sign up to this for some reason</p>
-      <button>Sign Up</button>
+      <div class="signup-container">
+        <div class="signup-text">
+          <h2>Signup Now</h2>
+          <p>You should sign up to this for some reason</p>
+        </div>
+        <button>Sign Up</button>
+      </div>
     </div>
     <div class="footer">
       <p>Footer stuff here</p>
